--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,5 +3,6 @@
   "teacher": "teacher",
   "subject": "subject",
   "searchBtn": "search",
-  "resetBtn": "reset"
+  "resetBtn": "reset",
+  "courseList": "Course List"
 }
