feat: 完成按钮级权限功能

--- a/docs/总结.md
+++ b/docs/总结.md
@@ -130,6 +130,12 @@
 - 这时候要清空本地用户数据，让用户重新登录~  
 
 4. 按钮级权限
+- 获取按钮权限列表值 permissionValueList
+- 所有页面的功能按钮都应该根据 permissionValueList 的值来决定按钮的显示/隐藏
+  - permissionValueList有很多，将上来可能有上百个权限值
+  - 过滤：目的是为了过滤掉当前组件不要的权限值~
+  - 拼成对象返回：对象读取属性找，性能更好~ （为了实际使用，方便、性能好~）
+- 这样就能控制用户的操作按钮的权限
 
 
 
