--- a/docs/总结.md
+++ b/docs/总结.md
@@ -138,4 +138,18 @@
 - 这样就能控制用户的操作按钮的权限
 
 
+## 项目上线
+1. 合并代码
+- 来到主干 master ，合并你开发分支代码~
+- 注意：一定要有能力解决冲突（双方代码都要保留）
+
+2. 打包：npm run build 
+- 问题：请求访问地址
+  - 开发: 开发服务器地址
+  - 上线：线上服务器地址（看接口文档）
+  - 通过 process.env.NODE_ENV 区分开发和线上来切换地址
+- 问题：文件体积较大
+  - 去掉不用文件，如 map 文件（测试一下）
+
+3. 部署&发布
 
